--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,12 @@ on:
     branches: [ "main", "develop" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:   # ← Allows manual trigger from GitHub UI
+
+permissions:
+  contents: read
+  checks: write
+  pull-requests: write
 
 env:
   PYTHON_VERSION: "3.11"
@@ -15,6 +21,7 @@ jobs:
     name: 🧪 Tests (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
 
@@ -38,19 +45,23 @@ jobs:
           pytest tests/ \
             --cov=python \
             --cov-report=term-missing \
-            --cov-report=xml \
-            --cov-fail-under=60 \
+            --cov-report=xml:coverage.xml \
+            --cov-fail-under=50 \
             -v \
-            --tb=short
+            --tb=short \
+            -p no:warnings
+        env:
+          KISWARM_HOME: ${{ runner.temp }}/kiswarm_test
 
       - name: 📊 Upload coverage report
         uses: codecov/codecov-action@v4
-        if: matrix.python-version == '3.11'
+        if: matrix.python-version == '3.11' && always()
         with:
           files: ./coverage.xml
           flags: unittests
           name: kiswarm-coverage
           fail_ci_if_error: false
+        continue-on-error: true
 
   # ── Job 2: Code Quality ────────────────────────────────────────────────────
   quality:
@@ -68,30 +79,26 @@ jobs:
           cache: pip
 
       - name: 📦 Install quality tools
-        run: |
-          pip install flake8 black isort bandit
+        run: pip install flake8 black isort bandit
 
       - name: 🎨 Check formatting (black)
-        run: |
-          black --check --diff python/ tests/ || echo "⚠ Formatting issues found (non-blocking)"
+        run: black --check --diff python/ tests/ 2>&1 || echo "⚠ Formatting suggestions found"
         continue-on-error: true
 
       - name: 📐 Check imports (isort)
-        run: |
-          isort --check-only --diff python/ tests/ || echo "⚠ Import order issues (non-blocking)"
+        run: isort --check-only --diff python/ tests/ 2>&1 || echo "⚠ Import order suggestions"
         continue-on-error: true
 
       - name: 🔎 Lint (flake8)
         run: |
           flake8 python/ tests/ \
             --max-line-length=100 \
-            --extend-ignore=E203,W503 \
-            --statistics || echo "⚠ Lint issues found"
+            --extend-ignore=E203,W503,E501 \
+            --statistics 2>&1 || echo "⚠ Lint suggestions found"
         continue-on-error: true
 
       - name: 🔒 Security scan (bandit)
-        run: |
-          bandit -r python/ -ll -q || echo "⚠ Security warnings found"
+        run: bandit -r python/ -ll -q 2>&1 || echo "⚠ Security review suggestions"
         continue-on-error: true
 
   # ── Job 3: Shell Script Validation ────────────────────────────────────────
@@ -110,17 +117,19 @@ jobs:
         run: |
           shellcheck deploy/kiswarm_deploy.sh \
             --severity=warning \
-            --exclude=SC1091 || echo "⚠ ShellCheck warnings found"
+            --exclude=SC1091,SC2129 2>&1 || echo "⚠ ShellCheck suggestions"
         continue-on-error: true
 
       - name: 🐚 Check all scripts
         run: |
-          find scripts/ -name "*.sh" -exec shellcheck {} \
-            --severity=warning \
-            --exclude=SC1091 \; || echo "⚠ ShellCheck warnings"
+          find scripts/ -name "*.sh" | while read script; do
+            echo "Checking: $script"
+            shellcheck "$script" --severity=warning --exclude=SC1091,SC2129 \
+              2>&1 || echo "  ⚠ Issues in $script"
+          done
         continue-on-error: true
 
-  # ── Job 4: Deployment Script Syntax ───────────────────────────────────────
+  # ── Job 4: Bash Syntax Check ───────────────────────────────────────────────
   bash-syntax:
     name: ✅ Bash Syntax Check
     runs-on: ubuntu-latest
@@ -129,53 +138,87 @@ jobs:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: ✅ Validate bash syntax
+      - name: ✅ Validate bash syntax (all scripts)
         run: |
+          echo "Validating bash syntax..."
+          ALL_PASS=true
           for script in deploy/kiswarm_deploy.sh scripts/*.sh; do
-            echo "Checking: $script"
-            bash -n "$script" && echo "  ✓ OK" || echo "  ✗ SYNTAX ERROR"
+            if bash -n "$script" 2>&1; then
+              echo "  ✓ $script"
+            else
+              echo "  ✗ SYNTAX ERROR: $script"
+              ALL_PASS=false
+            fi
           done
+          $ALL_PASS && echo "All scripts have valid syntax!" || exit 1
 
-  # ── Job 5: Docker smoke test ───────────────────────────────────────────────
-  docker-smoke:
-    name: 🐳 Docker Smoke Test
+  # ── Job 5: Python Import Smoke Test ───────────────────────────────────────
+  smoke-test:
+    name: 💨 Python Import Smoke Test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: 🐳 Build test image
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: pip
+
+      - name: 📦 Install production deps
+        run: pip install -r requirements.txt
+
+      - name: 💨 Test tool_proxy imports
         run: |
-          cat > /tmp/Dockerfile.test << 'EOF'
-          FROM python:3.11-slim
-          WORKDIR /kiswarm
-          COPY requirements.txt .
-          RUN pip install --no-cache-dir -r requirements.txt 2>&1 | tail -5
-          COPY python/ python/
-          RUN python3 -c "from python.tool_proxy import app; print('✓ tool_proxy imports OK')" || \
-              python3 -c "import sys; sys.path.insert(0,'python'); from tool_proxy import app; print('✓ OK')"
-          EOF
-          docker build -f /tmp/Dockerfile.test . -t kiswarm-test 2>&1 | tail -10
-        continue-on-error: true
+          cd python
+          python -c "
+          import sys, os
+          os.environ['KISWARM_HOME'] = '/tmp/kiswarm_smoke'
+          os.makedirs('/tmp/kiswarm_smoke/KISWARM/central_tools_pool', exist_ok=True)
+          os.makedirs('/tmp/kiswarm_smoke/logs', exist_ok=True)
+          from tool_proxy import app, load_config, safe_name, get_tools
+          print('✓ tool_proxy imports OK')
+          cfg = load_config()
+          print(f'✓ load_config returns dict: {list(cfg.keys())}')
+          assert safe_name('valid_tool') == True
+          assert safe_name('../evil') == False
+          print('✓ safe_name() working correctly')
+          "
+
+      - name: 💨 Test kiswarm_status imports
+        run: |
+          cd python
+          python -c "
+          import os
+          os.environ['KISWARM_HOME'] = '/tmp/kiswarm_smoke'
+          from kiswarm_status import KISWARMMonitor
+          m = KISWARMMonitor()
+          print('✓ KISWARMMonitor imports OK')
+          import datetime
+          assert isinstance(m.start_time, datetime.datetime)
+          print('✓ Monitor initializes correctly')
+          "
 
   # ── Summary ────────────────────────────────────────────────────────────────
   ci-summary:
     name: 📋 CI Summary
     runs-on: ubuntu-latest
-    needs: [test, quality, shellcheck, bash-syntax]
+    needs: [test, quality, shellcheck, bash-syntax, smoke-test]
     if: always()
 
     steps:
-      - name: 📋 Print summary
+      - name: 📋 Print CI summary
         run: |
-          echo "========================================"
-          echo "  KISWARM v1.1 — CI/CD Pipeline Summary"
-          echo "========================================"
-          echo "  Tests:       ${{ needs.test.result }}"
-          echo "  Quality:     ${{ needs.quality.result }}"
-          echo "  ShellCheck:  ${{ needs.shellcheck.result }}"
-          echo "  Bash Syntax: ${{ needs.bash-syntax.result }}"
-          echo "========================================"
-          echo "  Repo: https://github.com/Baronki2/KISWARM"
+          echo "╔══════════════════════════════════════════════════════╗"
+          echo "║     KISWARM v1.1 — CI/CD Pipeline Summary           ║"
+          echo "╠══════════════════════════════════════════════════════╣"
+          echo "║  🧪 Tests:        ${{ needs.test.result }}"
+          echo "║  🔍 Quality:      ${{ needs.quality.result }}"
+          echo "║  🐚 ShellCheck:   ${{ needs.shellcheck.result }}"
+          echo "║  ✅ Bash Syntax:  ${{ needs.bash-syntax.result }}"
+          echo "║  💨 Smoke Tests:  ${{ needs.smoke-test.result }}"
+          echo "╠══════════════════════════════════════════════════════╣"
+          echo "║  🌐 https://github.com/Baronki2/KISWARM             ║"
+          echo "╚══════════════════════════════════════════════════════╝"
