--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-ollama==0.1.0\nqdrant-client==0.9.0\nflask==2.1.0\nrlich==10.0.0\npsutil==5.9.0\n
+ollama==0.1.32
+mem0==0.0.15
+qdrant-client==2.7.0
+chromadb==0.4.21
+tiktoken==0.5.2
+openai==1.3.8
+rich==13.7.0
+flask==3.0.0
+requests==2.31.0
+numpy==1.24.3
+watchdog==3.0.0
+psutil==5.9.6
+flask-cors==4.0.0
