--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,20 +1,1 @@
-# KISWARM v1.1 — Development & Test Dependencies
-# Install: pip install -r requirements-dev.txt
-
-# Production deps included
--r requirements.txt
-
-# Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-mock>=3.12.0
-pytest-asyncio>=0.21.0
-
-# Code quality
-flake8>=6.1.0
-black>=23.0.0
-isort>=5.12.0
-mypy>=1.5.0
-
-# Security
-bandit>=1.7.5
+pytest==6.2.5\npytest-cov==2.12.1\nblack==21.9b0\nflake8==3.9.2\nbandit==1.7.0\nmypy==0.910\n# Add other dev tools with specific versions below\n
