--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
-ollama==0.1.32
-mem0==0.0.15
-qdrant-client==2.7.0
-chromadb==0.4.21
+ollama==0.1.31
+openai==1.14.0
 tiktoken==0.5.2
-openai==1.3.8
-rich==13.7.0
-flask==3.0.0
-requests==2.31.0
-numpy==1.24.3
-watchdog==3.0.0
-psutil==5.9.6
+qdrant-client==2.7.3
+chromadb==0.4.24
+mem0==0.0.1
+Flask==3.0.1
 flask-cors==4.0.0
+Werkzeug==3.0.1
+requests==2.31.0
+urllib3==2.1.0
+numpy==1.24.3
+pandas==2.1.4
+psutil==5.9.6
+watchdog==3.0.0
+rich==13.7.0
+colorama==0.4.6
+python-dotenv==1.0.0
+jsonschema==4.21.1
