🛡️ KISWARM v2.1-EMS — Sentinel Bridge: Autonomous Knowledge Extraction
NEW MODULE: SENTINEL BRIDGE (AKE — Autonomous Knowledge Extraction)

python/sentinel/
├── __init__.py              ← Package exports
├── sentinel_bridge.py       ← Core AKE orchestrator (480 lines)
│   ├── WikipediaScout       ← Encyclopedic knowledge via REST API
│   ├── ArxivScout           ← Academic/research via ArXiv API
│   ├── DuckDuckGoScout      ← Web intelligence via DDG Instant Answers
│   ├── OllamaScout          ← Local swarm self-synthesis
│   ├── LogicSynthesizer     ← Cross-verification, dedup, distillation
│   ├── CentralKnowledgeManager  ← Gap detection (confidence < 85%)
│   ├── SwarmMemoryInjector  ← Qdrant vectorization + injection
│   └── SentinelBridge       ← Full AKE pipeline orchestrator
├── swarm_debate.py          ← Conflict resolution engine (180 lines)
│   └── SwarmDebateEngine    ← Multi-model vote to resolve contradictions
└── sentinel_api.py          ← Flask REST API on Port 11436

scripts/sentinel_trigger.sh  ← Shell CLI + CKM integration

ARCHITECTURE (Deep-Extraction Loop):
  1. CKM estimates local confidence → gap detected if < 85%
  2. 4 parallel scouts deployed (Wikipedia + ArXiv + DDG + Ollama)
  3. LogicSynthesizer deduplicates, ranks, distills intelligence
  4. Conflict detection → SwarmDebateEngine resolves via model vote
  5. Verified SwarmKnowledge injected into Qdrant sentinel_knowledge

API ENDPOINTS (Port 11436):
  POST /sentinel/extract    ← Trigger AKE for a query
  POST /sentinel/debate     ← Swarm Debate: resolve conflicting sources
  GET  /sentinel/search     ← Query existing swarm memory
  GET  /sentinel/status     ← System health + stats
  GET  /health              ← Service ping

COMMANDS:
  sentinel-extract 'quantum computing'  ← Extract + inject
  sentinel-search  'machine learning'   ← Search memory
  sentinel-status                       ← Live status

TESTS: 148/148 passing (+37 new sentinel tests)
VERSION: KISWARM-2.1-EMS

--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,7 @@ typing-extensions>=4.8.0
 # ── Dev / Test dependencies ────────────────────────────────────────────────
 # Install with: pip install -r requirements-dev.txt
 
+# ── v2.1 Sentinel Bridge ───────────────────────────────────────────────────
+aiohttp>=3.9.0
+sentence-transformers>=2.7.0
+pytest-asyncio>=0.21.0
