🧠 KISWARM v2.2-EMS — Six Advanced Intelligence Modules (205 tests)
Module 1: Semantic Conflict Detection (semantic_conflict.py)
  - Cosine similarity contradiction clustering (no numpy)
  - Union-Find algorithm for cluster grouping
  - Severity zones: CRITICAL/HIGH/MEDIUM/LOW/OK
  - 384-dim embeddings with sentence-transformers or hash fallback
  - Caches embeddings by MD5 content fingerprint

Module 2: Knowledge Decay Engine (knowledge_decay.py)
  - Half-life decay: confidence(t) = c₀ × 2^(−t/half_life)
  - 6 categories: breaking_news(6h) → historical(∞)
  - Automatic category inference from sources + query keywords
  - Scheduled revalidation flagging at <40% confidence
  - Persistent JSON registry with full audit trail

Module 3: Model Performance Tracker (model_tracker.py)
  - ELO rating system (K=32) updated after every debate
  - Post-hoc validation accuracy tracking
  - reliability_score = 0.6×ELO_norm + 0.4×validation_accuracy
  - get_vote_weights() → normalised reliability-based voting
  - Full leaderboard with rank, ELO, win_rate, debates

Module 4: Cryptographic Knowledge Ledger (crypto_ledger.py)
  - SHA-256 signatures over content + metadata + prev_root
  - Append-only Merkle tree (binary hash tree)
  - Full tamper detection: recompute all signatures + root
  - Merkle inclusion proofs for selective verification
  - Detects single-character mutations in any historical entry

Module 5: Differential Retrieval Guard (retrieval_guard.py)
  - 4-layer trust pipeline: crypto + drift + divergence + decay
  - DriftDetector: stored content vs original (internal mutation)
  - DivergenceDetector: stored vs fresh fetch (world changed)
  - Trust levels: TRUSTED / CAUTION / STALE / COMPROMISED
  - Integrates ledger + decay engine + semantic similarity

Module 6: Adversarial Prompt Firewall (prompt_firewall.py)
  - Layer 1: 5 regex pattern libraries (pre-compiled)
    * JAILBREAK: instruction override, DAN, identity manipulation
    * POLICY_BYPASS: educational/hypotheti

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,1 +1,3 @@
-[pytest]\naddopts = --maxfail=5 --disable-warnings --tb=short\n\ntestpaths = tests\ntestcollection = True\n
+[pytest]
+addopts = --maxfail=10 --disable-warnings --tb=short
+testpaths = tests
